--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "galactic.queue",
-  "version": "1.0.4",
+  "version": "1.0.6",
   "description": "",
-  "main": "dist/queue.js",
+  "main": "queue.js",
   "author": "Michael Deal <hello@galactic.ink> (https://galactic.ink)",
   "license": "MIT",
   "repository": {
